🐛 Fix search page content resizing on filtering (#703) * Force `overflow-y: scroll` on root and search-results-wrapper so that 100vw styles respect scrollbar width

--- a/ui/src/index.css
+++ b/ui/src/index.css
@@ -18,6 +18,7 @@ body,
 #root {
   display: flex;
   flex-direction: column;
+  overflow-y: scroll;
 }
 
 *:focus {
